--- a/src/android/res/layout/edit_entity.xml
+++ b/src/android/res/layout/edit_entity.xml
@@ -63,11 +63,11 @@
 					<EditText
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:hint="name"
+						android:hint="@string/hint_name"
 						android:id="@+id/name_edit"
 						android:layout_weight="1" />
 					<EditText
-						android:hint="abbrev"
+						android:hint="@string/hint_abbrev"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:id="@+id/abbrev_edit"
@@ -78,17 +78,17 @@
 					<TextView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="init "
+						android:text="@string/init_edit"
 						android:textSize="18sp"
 						android:textColor="#111111" />
 					<EditText
-						android:hint="init modifier"
+						android:hint="@string/hint_init_modifier"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:id="@+id/init_dice_edit"
 						android:layout_weight="1" />
 					<EditText
-						android:hint="init roll"
+						android:hint="@string/hint_init_roll"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:id="@+id/init_roll_edit"
@@ -98,17 +98,17 @@
 					<TextView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="hp "
+						android:text="@string/hp_edit"
 						android:textSize="18sp"
 						android:textColor="#111111" />
 					<EditText
-						android:hint="hit dice"
+						android:hint="@string/hint_hit_dice"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:id="@+id/hitdice_edit"
 						android:layout_weight="1" />
 					<EditText
-						android:hint="hit points"
+						android:hint="@string/hint_hp"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:id="@+id/hp_edit"
@@ -118,13 +118,13 @@
 					<TextView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="sub"
+						android:text="@string/label_sub"
 						android:textSize="18sp"
 						android:textColor="#111111" />
 					<EditText
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:hint="subdual damage"
+						android:hint="@string/hint_subdual"
 						android:id="@+id/subdual_edit"
 						android:layout_weight="1" />
 				</TableRow>
@@ -132,13 +132,13 @@
 					<TextView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="rnds"
+						android:text="@string/label_rnds"
 						android:textSize="18sp"
 						android:textColor="#111111" />
 					<EditText
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:hint="rounds left"
+						android:hint="@string/hint_rounds_left"
 						android:id="@+id/rounds_edit"
 						android:layout_weight="1" />
 				</TableRow>
@@ -146,7 +146,7 @@
 					<TextView
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="type "
+						android:text="@string/labe_type"
 						android:textSize="18sp"
 						android:textColor="#111111" />
 					<Spinner
