--- a/src/android/res/layout/entity_type_selector.xml
+++ b/src/android/res/layout/entity_type_selector.xml
@@ -18,6 +18,6 @@
         android:id="@android:id/empty"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="ERROR: No entity types" />
+        android:text="@string/error_no_entity_types" />
 
 </LinearLayout>
