--- a/src/android/res/layout/main.xml
+++ b/src/android/res/layout/main.xml
@@ -99,7 +99,7 @@
                 android:textColor="#111111" />
             <TextView
                 android:id="@+id/roundView"
-                android:text="round 12"
+                android:text=""
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="4sp"
@@ -107,7 +107,7 @@
                 android:textSize="17sp"
                 android:textColor="#111111" />
             <TextView
-                android:text="init: "
+                android:text="@string/label2_init"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="4sp"
@@ -131,14 +131,14 @@
                 android:textColor="#111111" />
             <Button
                 android:id="@+id/resetButton"
-                android:text="Reset"
+                android:text="@string/button_reset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:textColor="#111111" />
             <Button
                 android:id="@+id/nextButton"
-                android:text="Next"
+                android:text="@string/button_next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="right"
