--- a/src/android/src/main/res/layout/add_effect.xml
+++ b/src/android/src/main/res/layout/add_effect.xml
@@ -119,6 +119,18 @@
 						android:id="@+id/rounds_edit"
 						android:layout_weight="1" />
 				</TableRow>
+				<TableRow>
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/label_type"
+						android:textSize="18sp"
+						android:textColor="#111111" />
+					<Spinner
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:id="@+id/type_edit" />
+				</TableRow>
 			</TableLayout>
 			<TextView
 				android:text=""
