--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -27,11 +27,12 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.group:before,
+.group:after {
+  content: "";
+  display: table;
 }
+.group:after {
+  clear: both;
+}
+
